# sample

./: README.md
bulk-import/src/com/camvi/sample/: Importer.java  ServerSession.java
message-queue/: .gitignore  CMakeLists.txt  README.md  build-dep.sh  build.sh  json.h  messages.cpp
message-queue/cppzmq/: libzmqPkgConfigFallback.cmake
message-queue/zeromq-4.2.0/: .gitignore  CMakeLists.txt
notifier/: Camvi.py  Notify.py  README.txt  config.py  manage.py  requirements.txt
recognize-person/: README.md  reco.py
